Comentarios de la homotecia añadidos

--- a/TFG-prueba_circunferencias.html
+++ b/TFG-prueba_circunferencias.html
@@ -85,6 +85,10 @@
 
 	//**********************************************************************
 	// Hace una transformacion lineal
+	// Una homotecia con:
+	// punto: el punto a trasladar
+	// escala: la escala de la homotecia
+	// centro: centro de la homotecia
 
 	function linealTransformation(punto, escala, centro){
 		return punto * escala + centro;
